--- a/about.html
+++ b/about.html
@@ -2,104 +2,226 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>About Us - Lifestyle Vibes</title>
-    <link
-      rel="stylesheet"
-      href="https://cdn.jsdelivr.net/npm/@picocss/pico@1/css/pico.min.css"
-    />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Lifestyle Vibes - About</title>
+    <link rel="stylesheet" href="style.css" />
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" />
   </head>
   <body>
-    <nav class="container-fluid">
-      <ul>
-        <li><strong>Lifestyle Vibes</strong></li>
-      </ul>
-      <ul>
-        <li><a href="index.html">Home</a></li>
-        <li><a href="about.html">About</a></li>
-        <li><a href="#">Contact</a></li>
-        <li><a href="#" role="button">Subscribe</a></li>
-      </ul>
+    <!-- Navigation -->
+    <nav class="navbar navbar-expand-lg navbar-light bg-light shadow-sm fixed-top">
+      <div class="container">
+        <a class="navbar-brand" href="index.html"> <i class="fas fa-leaf text-success"></i> Lifestyle Vibes </a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNav">
+          <ul class="navbar-nav ms-auto">
+            <li class="nav-item">
+              <a class="nav-link" href="index.html">Home</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link active" href="about.html">About</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#">Contact</a>
+            </li>
+            <li class="nav-item">
+              <a class="btn btn-success rounded-pill ms-2" href="#">Subscribe</a>
+            </li>
+          </ul>
+        </div>
+      </div>
     </nav>
 
-    <main class="container">
-      <div class="grid">
-        <section>
-          <hgroup>
-            <h2>About Lifestyle Vibes</h2>
-            <h3>Our Story & Vision</h3>
-          </hgroup>
-          <p>
-            Lifestyle Vibes was created with a simple goal: to help people live
-            better, healthier, and more fulfilling lives. We believe that true
-            happiness comes from balance, mindfulness, and a deep connection to
-            the world around us.
-          </p>
-          <figure>
-            <img
-              src="https://images.unsplash.com/photo-1507919909716-c8262e491cde?q=80&w=1932&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"
-              alt="Nature and lifestyle image from Unsplash"
-            />
-            <figcaption>
-              <a href="https://unsplash.com" target="_blank"
-                >Photo from Unsplash</a
-              >
-            </figcaption>
-          </figure>
-          <h3>Our Mission</h3>
-          <p>
-            Our mission is to inspire and empower individuals to live
-            consciously. We cover various aspects of life including wellness,
-            fitness, fashion, and mindfulness to help our audience elevate their
-            everyday experiences.
-          </p>
-          <h3>Meet the Team</h3>
-          <p>
-            Our team consists of wellness enthusiasts, fitness experts, and
-            lifestyle gurus. We're dedicated to bringing you the latest insights
-            and trends to help you live your best life.
-          </p>
-        </section>
-      </div>
-    </main>
-
-    <section aria-label="Subscribe example">
+    <!-- Hero Section -->
+    <section class="section about-hero">
       <div class="container">
-        <article>
-          <hgroup>
-            <h2>Stay in the Loop</h2>
-            <h3>Subscribe to Our Newsletter</h3>
-          </hgroup>
-          <form class="grid">
-            <input
-              type="text"
-              id="firstname"
-              name="firstname"
-              placeholder="First Name"
-              aria-label="First Name"
-              required
-            />
-            <input
-              type="email"
-              id="email"
-              name="email"
-              placeholder="Email"
-              aria-label="Email"
-              required
-            />
-            <button type="submit" onclick="event.preventDefault()">
-              Subscribe
-            </button>
-          </form>
-        </article>
+        <div class="row align-items-center">
+          <div class="col-lg-6">
+            <h1 class="display-4 fw-bold mb-4">Our Story & Vision</h1>
+            <p class="lead text-muted">
+              Lifestyle Vibes was created with a simple goal: to help people live better, healthier, and more fulfilling lives. We believe that true happiness comes from balance, mindfulness, and a deep connection to the world around us.
+            </p>
+          </div>
+          <div class="col-lg-6">
+            <img src="https://images.unsplash.com/photo-1557804506-669a67965ba0?q=80&w=1974&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" class="hero-image shadow" alt="About Us" />
+          </div>
+        </div>
       </div>
     </section>
 
-    <footer class="container">
-      <small
-        ><a href="#">Privacy Policy</a> •
-        <a href="#">Terms & Conditions</a></small
-      >
+    <!-- Mission Section -->
+    <section class="section">
+      <div class="container">
+        <div class="mission-section">
+          <div class="row text-center">
+            <div class="col-md-4 text-center mb-4 mb-md-0">
+              <i class="fas fa-heart text-success fa-3x mb-3"></i>
+              <h3>Wellness</h3>
+              <p>Promoting healthy living through mindful practices</p>
+            </div>
+            <div class="col-md-4 text-center mb-4 mb-md-0">
+              <i class="fas fa-balance-scale text-success fa-3x mb-3"></i>
+              <h3>Balance</h3>
+              <p>Finding harmony in all aspects of life</p>
+            </div>
+            <div class="col-md-4 text-center">
+              <i class="fas fa-lightbulb text-success fa-3x mb-3"></i>
+              <h3>Innovation</h3>
+              <p>Bringing fresh perspectives to lifestyle choices</p>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <section class="section team-section bg-light">
+      <div class="container">
+        <h2 class="text-center mb-5">Meet the Team</h2>
+        <div class="row g-4">
+          <div class="col-md-4">
+            <div class="team-card card text-center">
+              <img
+                src="https://images.unsplash.com/photo-1534528741775-53994a69daeb?q=80&w=1964&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"
+                class="card-img-top team-image"
+                alt="Team Member"
+              />
+              <div class="card-body">
+                <h4 class="card-title">Sarah Johnson</h4>
+                <p class="text-muted">Wellness Expert</p>
+                <div class="social-links mt-3">
+                  <a href="#" class="text-success mx-2"><i class="fab fa-linkedin"></i></a>
+                  <a href="#" class="text-success mx-2"><i class="fab fa-twitter"></i></a>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="col-md-4">
+            <div class="team-card card text-center">
+              <img
+                src="https://images.unsplash.com/photo-1501196354995-cbb51c65aaea?q=80&w=1771&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"
+                class="card-img-top team-image"
+                alt="Team Member"
+              />
+              <div class="card-body">
+                <h4 class="card-title">Mike Chen</h4>
+                <p class="text-muted">Fitness Guru</p>
+                <div class="social-links mt-3">
+                  <a href="#" class="text-success mx-2"><i class="fab fa-linkedin"></i></a>
+                  <a href="#" class="text-success mx-2"><i class="fab fa-twitter"></i></a>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="col-md-4">
+            <div class="team-card card text-center">
+              <img
+                src="https://images.unsplash.com/photo-1519699047748-de8e457a634e?q=80&w=1780&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"
+                class="card-img-top team-image"
+                alt="Team Member"
+              />
+              <div class="card-body">
+                <h4 class="card-title">Emma Davis</h4>
+                <p class="text-muted">Lifestyle Coach</p>
+                <div class="social-links mt-3">
+                  <a href="#" class="text-success mx-2"><i class="fab fa-linkedin"></i></a>
+                  <a href="#" class="text-success mx-2"><i class="fab fa-twitter"></i></a>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <!-- Subscribe Section -->
+    <section class="section subscribe-section">
+      <div class="container text-center">
+        <h2 class="display-6 mb-4 text-success">Stay In The Loop</h2>
+        <p class="text-muted mb-4">Subscribe for the latest lifestyle updates delivered to your inbox</p>
+
+        <div class="row justify-content-center">
+          <div class="col-md-8 col-lg-6">
+            <div class="subscribe-form p-4 bg-white rounded-3 shadow-sm">
+              <div class="input-group">
+                <input type="email" class="form-control form-control-lg" placeholder="Enter your email" />
+                <button class="btn btn-success rounded-end px-4">Subscribe</button>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <!-- Contact Section -->
+    <section class="section contact-section bg-light py-5">
+      <div class="container">
+        <div class="row justify-content-center">
+          <div class="col-md-10">
+            <div class="text-center mb-5">
+              <h2 class="display-6 mb-3">Get in Touch</h2>
+              <p class="text-muted">Have questions? We'd love to hear from you.</p>
+            </div>
+
+            <div class="row g-4">
+              <div class="col-md-7">
+                <div class="contact-form bg-white p-4 rounded-3 shadow-sm">
+                  <div class="mb-3">
+                    <input type="text" class="form-control" placeholder="Your Name" />
+                  </div>
+                  <div class="mb-3">
+                    <input type="email" class="form-control" placeholder="Your Email" />
+                  </div>
+                  <div class="mb-3">
+                    <input type="text" class="form-control" placeholder="Subject" />
+                  </div>
+                  <div class="mb-3">
+                    <textarea class="form-control" rows="5" placeholder="Your Message"></textarea>
+                  </div>
+                  <button class="btn btn-success px-4">Send Message</button>
+                </div>
+              </div>
+
+              <div class="col-md-5">
+                <div class="contact-info bg-white p-4 rounded-3 shadow-sm h-100">
+                  <div class="mb-4">
+                    <h5 class="text-success">Address</h5>
+                    <p class="text-muted mb-0">123 Lifestyle Street, Creative City, 12345</p>
+                  </div>
+                  <div class="mb-4">
+                    <h5 class="text-success">Email</h5>
+                    <p class="text-muted mb-0">hello@lifestylevibes.com</p>
+                  </div>
+                  <div>
+                    <h5 class="text-success">Phone</h5>
+                    <p class="text-muted mb-0">+1 (555) 123-4567</p>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <!-- Footer -->
+    <footer class="footer">
+      <div class="container">
+        <div class="row">
+          <div class="col-md-6 text-center text-md-start">
+            <p class="mb-0">&copy; 2024 Lifestyle Vibes. All rights reserved.</p>
+          </div>
+          <div class="col-md-6 text-center text-md-end">
+            <a href="#" class="text-white text-decoration-none">Privacy Policy</a>
+            <span class="mx-2">•</span>
+            <a href="#" class="text-white text-decoration-none">Terms & Conditions</a>
+          </div>
+        </div>
+      </div>
     </footer>
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
   </body>
 </html>
