--- a/index.html
+++ b/index.html
@@ -2,101 +2,183 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>Lifestyle Theme</title>
-    <link
-      rel="stylesheet"
-      href="https://cdn.jsdelivr.net/npm/@picocss/pico@1/css/pico.min.css"
-    />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Lifestyle Vibes - Home</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link href="https://fonts.googleapis.com/css2?family=Libre+Caslon+Display&family=Libre+Caslon+Text:ital,wght@0,400;0,700;1,400&family=Poppins:wght@200;300;400&display=swap" rel="stylesheet" />
+    <link rel="stylesheet" href="style.css" />
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" />
   </head>
   <body>
-    <nav class="container-fluid">
-      <ul>
-        <li><strong>Lifestyle Vibes</strong></li>
-      </ul>
-      <ul>
-        <li><a href="index.html">Home</a></li>
-        <li><a href="about.html">About</a></li>
-        <li><a href="#">Contact</a></li>
-        <li><a href="#" role="button">Subscribe</a></li>
-      </ul>
+    <!-- Navigation -->
+    <nav class="navbar navbar-dark navbar-expand-lg shadow-sm fixed-top">
+      <div class="container">
+        <a class="navbar-brand georgia-bold" href="index.html"> <i class="fas fa-leaf text-success"></i> Lifestyle Vibes </a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNav">
+          <ul class="georgia navbar-nav ms-auto">
+            <li class="nav-item me-2">
+              <a class="nav-link active" href="index.html">Home</a>
+            </li>
+            <li class="nav-item me-2">
+              <a class="nav-link" href="about.html">About</a>
+            </li>
+            <li class="nav-item me-2">
+              <a class="nav-link" href="#contact">Contact</a>
+            </li>
+            <li class="nav-item me-2">
+              <a class="btn btn-success rounded-pill ms-2" href="#subscribe">Subscribe</a>
+            </li>
+          </ul>
+        </div>
+      </div>
     </nav>
 
-    <main class="container">
-      <div class="grid">
-        <section>
-          <hgroup>
-            <h2>Welcome to the Lifestyle Hub</h2>
-            <h3>Explore trends, wellness, and living your best life</h3>
-          </hgroup>
-          <p>
-            Lifestyle is all about finding balance, embracing health, and living
-            in the moment. Whether you're into fitness, mindfulness, or just
-            looking to elevate your daily routines, you've come to the right
-            place.
-          </p>
-          <figure>
-            <img
-              src="https://images.unsplash.com/photo-1507919909716-c8262e491cde?q=80&w=1932&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"
-              alt="Wellness lifestyle image from Unsplash"
-            />
-            <figcaption>
-              <a href="https://unsplash.com" target="_blank"
-                >Photo from Unsplash</a
-              >
-            </figcaption>
-          </figure>
-          <h3>Latest in Wellness</h3>
-          <p>
-            Discover the latest trends in wellness, from meditation techniques
-            to fitness tips that keep you grounded and healthy.
-          </p>
-          <h3>Explore Fashion & Trends</h3>
-          <p>
-            Stay ahead in fashion with insights into what's trending,
-            sustainable fashion tips, and more.
-          </p>
-        </section>
+    <!-- Hero Section -->
+    <div class="section hero-section">
+      <div id="heroCarousel" class="carousel slide carousel-fade" data-bs-ride="carousel" data-bs-interval="5000">
+        <div class="carousel-inner h-100">
+          <div class="carousel-item active h-100">
+            <img src="https://images.unsplash.com/photo-1511988617509-a57c8a288659?q=80&w=1771&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" class="header-image" />
+          </div>
+          <div class="carousel-item h-100">
+            <img src="https://images.unsplash.com/photo-1445307806294-bff7f67ff225?q=80&w=1774&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" class="header-image" />
+          </div>
+          <div class="carousel-item h-100">
+            <img src="https://images.unsplash.com/photo-1469474968028-56623f02e42e?q=80&w=2074&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" class="header-image" />
+          </div>
+        </div>
       </div>
-    </main>
 
-    <section aria-label="Subscribe example">
+      <div class="overlay"></div>
+
+      <div class="text-white container content">
+        <div class="row d-flex align-items-center justify-items-center text-center">
+          <h1 id="better-choices-better-life" class="header-text libre-caslon-text-bold fw-bold mb-4">Better Choices, Better Life</h1>
+          <p class="poppins-regular header-text-small">Explore trends, wellness, and discover the art of living your best life. Your journey to a balanced lifestyle starts here.</p>
+        </div>
+      </div>
+    </div>
+
+    <!-- Features Section -->
+    <section class="py-5" id="explore">
       <div class="container">
-        <article>
-          <hgroup>
-            <h2>Join Our Community</h2>
-            <h3>Subscribe for the latest lifestyle updates</h3>
-          </hgroup>
-          <form class="grid">
-            <input
-              type="text"
-              id="firstname"
-              name="firstname"
-              placeholder="First Name"
-              aria-label="First Name"
-              required
-            />
-            <input
-              type="email"
-              id="email"
-              name="email"
-              placeholder="Email"
-              aria-label="Email"
-              required
-            />
-            <button type="submit" onclick="event.preventDefault()">
-              Subscribe
-            </button>
-          </form>
-        </article>
+        <div class="row g-4">
+          <div class="col-md-6">
+            <div class="custom-card card h-100">
+              <img src="https://images.unsplash.com/photo-1607914660217-754fdd90041d?q=80&w=1770&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" class="card-img-top" alt="Wellness" />
+              <div class="card-body">
+                <h3 class="card-title">Latest in Wellness</h3>
+                <p class="card-text">Discover the latest trends in wellness, from meditation techniques to fitness tips that keep you grounded and healthy.</p>
+                <a href="#" class="btn btn-outline-success rounded-1">Learn More</a>
+              </div>
+            </div>
+          </div>
+          <div class="col-md-6">
+            <div class="custom-card card h-100">
+              <img src="https://images.unsplash.com/photo-1483985988355-763728e1935b?q=80&w=1770&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" class="card-img-top" alt="Fashion" />
+              <div class="card-body">
+                <h3 class="card-title">Explore Fashion & Trends</h3>
+                <p class="card-text">Stay ahead in fashion with insights into what's trending, sustainable fashion tips, and more.</p>
+                <a href="#" class="btn btn-outline-success rounded-1">Learn More</a>
+              </div>
+            </div>
+          </div>
+        </div>
       </div>
     </section>
 
-    <footer class="container">
-      <small
-        ><a href="#">Privacy Policy</a> •
-        <a href="#">Terms & Conditions</a></small
-      >
+    <!-- Subscribe Section -->
+    <section id="subscribe" class="section subscribe-section">
+      <div class="container text-center">
+        <h2 class="display-6 mb-4 text-success">Join Our Community</h2>
+        <p class="text-muted mb-4">Subscribe for the latest lifestyle updates delivered to your inbox</p>
+
+        <div class="row justify-content-center">
+          <div class="col-md-8 col-lg-6">
+            <div class="subscribe-form p-4 bg-white rounded-3 shadow-sm">
+              <div class="input-group">
+                <input type="email" class="form-control form-control-lg" placeholder="Enter your email" />
+                <button class="btn btn-success rounded-end px-4">Subscribe</button>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <!-- Contact Section -->
+    <section id="contact" class="section contact-section bg-light py-5">
+      <div class="container">
+        <div class="row justify-content-center">
+          <div class="col-md-10">
+            <div class="text-center mb-5">
+              <h2 class="display-6 mb-3">Get in Touch</h2>
+              <p class="text-muted">Have questions? We'd love to hear from you.</p>
+            </div>
+
+            <div class="row g-4">
+              <div class="col-md-7">
+                <div class="contact-form bg-white p-4 rounded-3 shadow-sm">
+                  <div class="mb-3">
+                    <input type="text" class="form-control" placeholder="Your Name" />
+                  </div>
+                  <div class="mb-3">
+                    <input type="email" class="form-control" placeholder="Your Email" />
+                  </div>
+                  <div class="mb-3">
+                    <input type="text" class="form-control" placeholder="Subject" />
+                  </div>
+                  <div class="mb-3">
+                    <textarea class="form-control" rows="5" placeholder="Your Message"></textarea>
+                  </div>
+                  <button class="btn btn-success px-4">Send Message</button>
+                </div>
+              </div>
+
+              <div class="col-md-5">
+                <div class="contact-info bg-white p-4 rounded-3 shadow-sm h-100">
+                  <div class="mb-4">
+                    <h5 class="text-success">Address</h5>
+                    <p class="text-muted mb-0">123 Lifestyle Street, Creative City, 12345</p>
+                  </div>
+                  <div class="mb-4">
+                    <h5 class="text-success">Email</h5>
+                    <p class="text-muted mb-0">hello@lifestylevibes.com</p>
+                  </div>
+                  <div>
+                    <h5 class="text-success">Phone</h5>
+                    <p class="text-muted mb-0">+1 (555) 123-4567</p>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <!-- Footer -->
+    <footer class="footer">
+      <div class="container">
+        <div class="row">
+          <div class="col-md-6 text-center text-md-start">
+            <p class="mb-0">&copy; 2024 Lifestyle Vibes. All rights reserved.</p>
+          </div>
+          <div class="col-md-6 text-center text-md-end">
+            <a href="#" class="text-white text-decoration-none">Privacy Policy</a>
+            <span class="mx-2">•</span>
+            <a href="#" class="text-white text-decoration-none">Terms & Conditions</a>
+          </div>
+        </div>
+      </div>
     </footer>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
   </body>
+  <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
+  <script src="script.js"></script>
 </html>
