--- a/index.html
+++ b/index.html
@@ -148,11 +148,11 @@
                   </div>
                   <div class="mb-4">
                     <h5 class="text-success">Email</h5>
-                    <p class="text-muted mb-0">hello@lifestylevibes.com</p>
+                    <p class="text-muted mb-0">richielagito1@gmail.com</p>
                   </div>
                   <div>
                     <h5 class="text-success">Phone</h5>
-                    <p class="text-muted mb-0">+1 (555) 123-4567</p>
+                    <p class="text-muted mb-0">+62 87728281688</p>
                   </div>
                 </div>
               </div>
